[package]
name = "windows-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"

[dependencies.windows]
version = "0.33.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]

[dev-dependencies]
env_logger = "0.9.0"

[dev-dependencies.windows]
version = "0.33.0"
features = [
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media",
    "Media_Ocr",
    "Storage",
    "Storage_Pickers",
    "Storage_Streams",
    "System_Inventory",
    "Win32_Foundation",
    "Win32_UI_Shell",
]
