[package]
name = "windows-async"
version = "0.2.1"
authors = ["saelay <saelay@outlook.jp>"]
edition = "2021"
description = "Simple async executor for windows application using windows crate."
repository = "https://github.com/saelay/windows-async-rs"
license = "MIT"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["api", "async", "windows"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
log = "0.4.14"

[dependencies.windows]
version = "0.33.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]

[dev-dependencies]
env_logger = "0.9.0"

[dev-dependencies.windows]
version = "0.33.0"
features = [
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media",
    "Media_Ocr",
    "Storage",
    "Storage_Pickers",
    "Storage_Streams",
    "System_Inventory",
    "Win32_Foundation",
    "Win32_UI_Shell",
]
